--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddPlayer"/>
+        <activity android:name=".EditPlayer"/>
+        <activity android:name=".ViewPlayers"/>
     </application>
 
 </manifest>
